# rosbag_recorder

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/rosbag_recorder/: RosbagRecorder.hpp
launch/: rosbag_recorder.launch
scripts/: rosbag_uploader.sh
src/: RosbagRecorder.cpp  rosbag_recorder_node.cpp
